--- a/src/index.css
+++ b/src/index.css
@@ -590,6 +590,8 @@ body.mobile-sidebar-open {
 .pane.highlights {
   overflow-y: auto;
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Mobile pane styles */
